--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">GifBox</string>
+
+    <string name="giphy_api_base_url">https://api.giphy.com/v1/</string>
+    <string name="giphy_api_key">PZgDL6LzM5hOqoBa3GgtX27rDIZXA0u0</string>
 </resources>
